force-app/main/default/objects/LocationData__c/LocationData__c.object-meta.xml
<CustomObject>
    <label>LocationData</label>
    <nameField>
        <displayFormat>LP-{000000000}</displayFormat>
        <label>LocationData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LocationData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>