force-app/main/default/objects/LocationData__c/fields/Fitness__c.field-meta.xml
<CustomField>
    <fullName>Fitness__c</fullName>
    <label>Fitness</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>