force-app/main/default/objects/LocationData__c/fields/RefId__c.field-meta.xml
<CustomField>
    <fullName>RefId__c</fullName>
    <label>RefId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>