force-app/main/default/objects/LocationData__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>Variance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>