force-app/main/default/objects/LocationData__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Cluster__c</columns>
    <columns>Distance__c</columns>
    <columns>index__c</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Location__Longitude__s</columns>
    <columns>Mean__c</columns>
    <columns>RefId__c</columns>
    <columns>Std_Dev__c</columns>
    <columns>Variance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All1</label>
</ListView>